fix mobile horizontal scroll, white bg preview mobile

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 
 @layer base {
   body {
+  overflow-x: hidden;
     @apply bg-cream text-dark font-sans;
   }
   h1, h2, h3, h4, h5, h6 {
